objects/CaseThreadSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <description>Enter the case record type name separated by a comma (",")</description>
        <label>Case Record Type(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClosedHours__c</fullName>
        <description>Used to designate the number of hours a case is closed before an incoming email would generate a new case instead of threading and reopening the case.</description>
        <label>Closed Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DisableThreading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to designate if a case should not thread at all.</description>
        <inlineHelpText>Disables all threading on a particular case record type; Closed or Open cases.</inlineHelpText>
        <label>Disable Threading</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Thread Setting</label>
    <pluralLabel>Case Thread Settings</pluralLabel>
</CustomObject>